--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
 
     <dependencies>
         <dependency>
+          <groupId>com.github.davidmoten</groupId>
+          <artifactId>rtree</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.github.davidmoten</groupId>
             <artifactId>guava-mini</artifactId>
             <version>0.1.2</version>
@@ -415,6 +420,14 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
             </plugin>
         </plugins>
     </build>
